--- a/web-site/index.html
+++ b/web-site/index.html
@@ -80,7 +80,7 @@
       });
 
       try {
-        const response = await fetch('http://localhost:5002/predict', {
+        const response = await fetch('/predict', {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify(data),
