--- a/web-site/index.html
+++ b/web-site/index.html
@@ -52,7 +52,7 @@
         <input type="number" step="any" id="N2O" name="N2O" required class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="เช่น 78.9" />
       </div>
 
-      <button type="submit" class="w-full bg-blue-600 text-white font-semibold py-3 rounded hover:bg-blue-700 transition">ทำนายอุณหภูมิ</button>
+      <button type="submit" class="w-full bg-black text-white font-semibold py-3 rounded hover:bg-gray-600 transition">ทำนายอุณหภูมิ</button>
 
     </form>
 
